--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
-                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">We Will Keep You An Awesome Look</h1>
+                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">We Will give Your and Body An Awesome Look</h1>
                             <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</h4>
                             <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</h4>
                         </div>
@@ -90,9 +90,9 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
-                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Luxury Haircut at Affordable Price</h1>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</h4>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</h4>
+                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Luxury Hair styles at Affordable Price</h1>
+                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-map-marker-alt text-primary me-3"></i>no 7 ayinde giwa off ogunlana drive Surulere lagos</h4>
+                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+234 807 893 0009</h4>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <div class="d-flex flex-column">
                         <img class="img-fluid w-75 align-self-end" src="img/WhatsApp Image 2023-11-03 at 08.39.01_92ffedef.jpg" alt="">
                         <div class="w-50 bg-secondary p-5" style="margin-top: -25%;">
-                            <h1 class="text-uppercase text-primary mb-3">25 Years</h1>
+                            <h1 class="text-uppercase text-primary mb-3">10 Years</h1>
                             <h2 class="text-uppercase mb-0">Experience</h2>
                         </div>
                     </div>
@@ -128,16 +128,16 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block bg-secondary text-primary py-1 px-4">About Us</p>
                     <h1 class="text-uppercase mb-4">More Than Just A Haircut. Learn More About Us!</h1>
-                    <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                    <p>Moore Touch is a versatile professional with expertise in hairstyling, tattoo artistry, design, and body piercing. With years of experience.</p>
+                    <p class="mb-4">Moore Touch is dedicated to providing clients with luxurious and expert services to enhance their hair and body aesthetics.</p>
                     <div class="row g-4">
                         <div class="col-md-6">
-                            <h3 class="text-uppercase mb-3">Since 1990</h3>
-                            <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</p>
+                            <h3 class="text-uppercase mb-3">Since 2015</h3>
+                            <p class="mb-0">With over a decade of experience in the beauty industry, This extensive experience demonstrates Moore Touch’s commitment to excellence and customer satisfaction in the beautician</p>
                         </div>
                         <div class="col-md-6">
                             <h3 class="text-uppercase mb-3">1000+ clients</h3>
-                            <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</p>
+                            <p class="mb-0">Moore Touch has successfully served over a thousand satisfied clients.</p>
                         </div>
                     </div>
                 </div>
@@ -161,9 +161,9 @@
                             <img class="img-fluid" src="img/haircut.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Haircut</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">locs</h3>
+                            <p> STARTER LOC/  30K INSTANT LOC 50K/  LOC RETWIST/20K  INTERLOCKING 25K  /  LOC STYLING 5K/  WASHING OF LOCS 5K/   LOC TREATMENT/15K</p>
+                            <span class="text-uppercase text-primary">From 5K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -174,9 +174,9 @@
                             <img class="img-fluid" src="img/beard-trim.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Beard Trim</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">PIERCINGS</h3>
+                            <p>STANDARD LOBE 5K EACH  TRANSVERSE LOBE/6K HELIX/FORWARD HELIX/7K OUTERCONCH/INNERCONCH 7K  TRAGUS /7K OUTER TRAGUS/10K     NOSE PIERCING /5K    INDUSTRIAL/15K ORBITAL 8K SMILEY 8K SEPTUM 8K NAVEL/15K NIPPLE 10K EACH</p>
+                            <span class="text-uppercase text-primary">From 5K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -200,9 +200,9 @@
                             <img class="img-fluid" src="img/hair-dyeing.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Hair Dyeing</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">tattoos</h3>
+                            <p>1 letter 3k   5 letter 15k  Italian B medium (6*6) 45k  minor art 20k  Italian small letter (6*6)35k     Block letter (8*8)75k  Half sleeve sketching 250k   Half sleeve writeup 350     full sleeve sketching /450   full writeup 700     Cover ups double normal price  Home service double normal price</p>
+                            <span class="text-uppercase text-primary">From 3K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -213,9 +213,9 @@
                             <img class="img-fluid" src="img/mustache.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Mustache</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">Hair Barbing</h3>
+                            <p>Book an Appointment for Exclusive Hair cut</p>
+                            <span class="text-uppercase text-primary">From 3K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -227,8 +227,8 @@
                         </div>
                         <div class="ps-4">
                             <h3 class="text-uppercase mb-3">Stacking</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <p>Hair TREATMENT available</p>
+                            <span class="text-uppercase text-primary">From 5K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
