--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
-                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">We Will give Your and Body An Awesome Look</h1>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</h4>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</h4>
+                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">We Will give Your Hair and Body An Awesome Look</h1>
+                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-map-marker-alt text-primary me-3"></i>no 7 ayinde giwa off ogunlana drive Surulere lagos</h4>
+                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+234 807 893 0009</h4>
                         </div>
                     </div>
                 </div>
@@ -188,8 +188,8 @@
                         </div>
                         <div class="ps-4">
                             <h3 class="text-uppercase mb-3">Mans Shave</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <p>Different Types of hair cut available</p>
+                            <span class="text-uppercase text-primary">From 3K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -245,32 +245,32 @@
             <div class="row g-0">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="bg-secondary h-100 d-flex flex-column justify-content-center p-5">
-                        <p class="d-inline-flex bg-dark text-primary py-1 px-4 me-auto">Price & Plan</p>
-                        <h1 class="text-uppercase mb-4">Check Out Our Barber Services And Prices</h1>
+                        <p class="d-inline-flex bg-dark text-primary py-1 px-4 me-auto">Price & Plan </p>
+                        <h1 class="text-uppercase mb-4">Check Out Our Services And Prices in Dollars</h1>
                         <div>
                             <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Haircut</h6>
+                                <h6 class="text-uppercase mb-0">locs</h6>
                                 <span class="text-uppercase text-primary">$29.00</span>
                             </div>
                             <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Beard Trim</h6>
+                                <h6 class="text-uppercase mb-0">PIERCINGS</h6>
                                 <span class="text-uppercase text-primary">$35.00</span>
                             </div>
                             <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Mans Shave</h6>
-                                <span class="text-uppercase text-primary">$23.00</span>
+                                <h6 class="text-uppercase mb-0">DERMAL PIERCING </h6>
+                                <span class="text-uppercase text-primary">$20.00</span>
                             </div>
                             <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Hair Dyeing</h6>
-                                <span class="text-uppercase text-primary">$19.00</span>
+                                <h6 class="text-uppercase mb-0">tattoos</h6>
+                                <span class="text-uppercase text-primary">$10.00</span>
                             </div>
                             <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Mustache</h6>
+                                <h6 class="text-uppercase mb-0">Hair cut</h6>
                                 <span class="text-uppercase text-primary">$15.00</span>
                             </div>
                             <div class="d-flex justify-content-between py-2">
-                                <h6 class="text-uppercase mb-0">Stacking</h6>
-                                <span class="text-uppercase text-primary">$39.00</span>
+                                <h6 class="text-uppercase mb-0">Hair Treatment</h6>
+                                <span class="text-uppercase text-primary">$10.00</span>
                             </div>
                         </div>
                     </div>
@@ -290,8 +290,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block bg-secondary text-primary py-1 px-4">Our Barber</p>
-                <h1 class="text-uppercase">Meet Our Barber</h1>
+                <p class="d-inline-block bg-secondary text-primary py-1 px-4">Our Recent  Work</p>
+                <h1 class="text-uppercase">Show Base</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -305,7 +305,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -353,7 +353,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
+                            <h5 class="text-uppercase">Locs</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -376,7 +376,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="bg-secondary h-100 d-flex flex-column justify-content-center p-5">
                         <p class="d-inline-flex bg-dark text-primary py-1 px-4 me-auto">Working Hours</p>
-                        <h1 class="text-uppercase mb-4">Professional Barbers Are Waiting For You</h1>
+                        <h1 class="text-uppercase mb-4">Official Opening Time !</h1>
                         <div>
                             <div class="d-flex justify-content-between border-bottom py-2">
                                 <h6 class="text-uppercase mb-0">Monday</h6>
@@ -400,7 +400,7 @@
                             </div>
                             <div class="d-flex justify-content-between py-2">
                                 <h6 class="text-uppercase mb-0">Sat / Sun</h6>
-                                <span class="text-uppercase text-primary">Closed</span>
+                                <span class="text-uppercase text-primary">With  Appointment Only</span>
                             </div>
                         </div>
                     </div>
