--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="about" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -113,7 +113,7 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" id="about">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -305,7 +305,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Locs</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Locs</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Locs</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -433,7 +433,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Locs</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -449,7 +449,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Locs</h5>
+                            <h5 class="text-uppercase">Piercing</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -465,7 +465,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Locs</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -481,7 +481,7 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Locs</h5>
+                            <h5 class="text-uppercase">Tattoos</h5>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -578,19 +578,19 @@
                         <div class="btn-square bg-dark flex-shrink-0 me-3">
                             <span class="fa fa-map-marker-alt text-primary"></span>
                         </div>
-                        <span>123 Street, New York, USA</span>
+                        <span>NO 7 AYINDE GIWA OFF OGUNLANA DRIVE SURULERE LAGOS</span>
                     </div>
                     <div class="d-flex align-items-center mb-2">
                         <div class="btn-square bg-dark flex-shrink-0 me-3">
                             <span class="fa fa-phone-alt text-primary"></span>
                         </div>
-                        <span>+012 345 67890</span>
+                        <span>+234 807 893 0009</span>
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="btn-square bg-dark flex-shrink-0 me-3">
                             <span class="fa fa-envelope-open text-primary"></span>
                         </div>
-                        <span>info@example.com</span>
+                        <span>morestouch@gmail.com</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
