--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                     <div class="bg-secondary p-5">
                         <p class="d-inline-block bg-dark text-primary py-1 px-4">Contact Us</p>
                         <h1 class="text-uppercase mb-4">Have Any Query? Please Contact Us!</h1>
-                        <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                        
                         <form>
                             <div class="row g-3">
                                 <div class="col-md-6">
@@ -133,7 +133,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="h-100" style="min-height: 400px;">
                         <iframe class="google-map w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                        src="https://www.google.at/maps/place/Ogunlana+Lane+%26+Ayinde+Giwa+St,+Surulere,+Shitta%2FOgunlana+Drive+101241,+Lagos,+Nigeria/@6.5030192,3.3493942,17z/data=!3m1!4b1!4m6!3m5!1s0x103b8c162be3dde5:0x6748d6f43edc8ae8!8m2!3d6.5030139!4d3.3519691!16s%2Fg%2F11f34tn0vv?entry=ttu"
                         frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0" style="filter: grayscale(100%) invert(92%) contrast(83%); border: 0;"></iframe>
                     </div>
                 </div>
